Update 'xi6l5vyrd-dotnet-basic' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-bbfec732c1.wa9c.p3.openshiftapps.com/rhtap/rhtap-qe:c26da119b2849e64cf6a1df2006109ca4b05e326@sha256:f953fdb54507dfe3de276a385ca116f96b0bc1694243cbfb8366d033dc20bbe2

--- a/components/xi6l5vyrd-dotnet-basic/overlays/development/deployment-patch.yaml
+++ b/components/xi6l5vyrd-dotnet-basic/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: xi6l5vyrd-dotnet-basic
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-bbfec732c1.wa9c.p3.openshiftapps.com/rhtap/rhtap-qe:c26da119b2849e64cf6a1df2006109ca4b05e326@sha256:f953fdb54507dfe3de276a385ca116f96b0bc1694243cbfb8366d033dc20bbe2
+          name: container-image
